# KalamDB

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  batch_compile_output.txt  batch_compile_output_review.txt  batch_compile_output_review_isolated.txt  batch_compile_output_stats_hot_only.txt  batch_compile_output_stats_hot_only_clean.txt  batch_docker_ubuntu24_build.txt  batch_docker_ubuntu24_lean_build.txt  batch_docker_ubuntu24_min_build.txt  batch_nextest_core_review.txt  batch_nextest_observability_review.txt  cargo-license-check.toml  install.sh  libtest_generic2.rlib  link-check-output.txt  link-client-npm-test-output.txt  link-consumer-npm-test-output.txt  link-test-output.txt  nextest.toml  server.toml
backend/: Cargo.toml  README.md  build.rs  server.example.toml  server.toml
backend/crates/kalamdb-api/: Cargo.toml
backend/crates/kalamdb-auth/: Cargo.toml
backend/crates/kalamdb-commons/: Cargo.toml
backend/crates/kalamdb-configs/: Cargo.toml
backend/crates/kalamdb-core/: Cargo.toml
backend/crates/kalamdb-datafusion-sources/: Cargo.toml
backend/crates/kalamdb-dba/: Cargo.toml
backend/crates/kalamdb-dialect/: Cargo.toml
backend/crates/kalamdb-filestore/: Cargo.toml
backend/crates/kalamdb-handlers/: Cargo.toml
backend/crates/kalamdb-jobs/: Cargo.toml
backend/crates/kalamdb-live/: Cargo.toml
backend/crates/kalamdb-observability/: Cargo.toml
backend/crates/kalamdb-oidc/: Cargo.toml
backend/crates/kalamdb-pg/: Cargo.toml
backend/crates/kalamdb-plan-cache/: Cargo.toml
backend/crates/kalamdb-raft/: Cargo.toml
backend/crates/kalamdb-server-auth/: Cargo.toml
backend/crates/kalamdb-session/: Cargo.toml
backend/crates/kalamdb-session-datafusion/: Cargo.toml
backend/crates/kalamdb-sharding/: Cargo.toml
backend/crates/kalamdb-store/: Cargo.toml
backend/crates/kalamdb-streams/: Cargo.toml
backend/crates/kalamdb-system/: Cargo.toml
backend/crates/kalamdb-tables/: Cargo.toml
backend/crates/kalamdb-transactions/: Cargo.toml
backend/crates/kalamdb-vector/: Cargo.toml
backend/crates/kalamdb-views/: Cargo.toml
backend/src/: connection_guard.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  middleware.rs
backend/tests/: endurance_test.rs
backend/tests/docs/: CATEGORY_SQL.md
backend/tests/integration_tests/: topic_pubsub.rs
backend/tests/scenarios/: helpers.rs  mod.rs  scenario_01_chat_app.rs  scenario_02_offline_sync.rs  scenario_03_shopping_cart.rs  scenario_04_iot_telemetry.rs  scenario_05_dashboards.rs  scenario_06_jobs.rs  scenario_07_collaborative.rs  scenario_08_burst.rs  scenario_09_ddl_while_active.rs  scenario_10_multi_tenant.rs  scenario_11_multi_storage.rs  scenario_12_performance.rs  test_scenarios.rs  (+2 more)
benchv2/: Cargo.toml  README.md  batch_compile_output.txt  run-benchmarks.sh  run-connection-scale.sh  server.toml
benchv2/logs/: server.jsonl
benchv2/results/: bench-2026-03-13-122707-0-4-1-b.html  bench-2026-03-13-122707-0-4-1-b.json  bench-2026-03-13-131845-0-4-1-b.html  bench-2026-03-13-131845-0-4-1-b.json  bench-2026-04-03-163826-0-4-2-rc1.html  bench-2026-04-03-163826-0-4-2-rc1.json  bench-2026-04-03-164457-0-4-2-rc1.html  bench-2026-04-03-164457-0-4-2-rc1.json  bench-2026-04-03-170825-0-4-2-rc1.html  bench-2026-04-03-170825-0-4-2-rc1.json  bench-2026-04-03-172319-0-4-2-rc1.html  bench-2026-04-03-172319-0-4-2-rc1.json  bench-2026-04-03-173436-0-4-2-rc1.html  bench-2026-04-03-173436-0-4-2-rc1.json  bench-2026-04-03-173753-0-4-2-rc1.html  bench-2026-04-03-173753-0-4-2-rc1.json  bench-2026-04-03-174738-0-4-2-rc1.html  bench-2026-04-03-174738-0-4-2-rc1.json  bench-2026-04-03-184311-0-4-2-rc1.html  bench-2026-04-03-184311-0-4-2-rc1.json  bench-2026-04-11-161937-0-4-2-rc1.html  bench-2026-04-11-161937-0-4-2-rc1.json  bench-2026-04-18-195119-0-4-2-rc-3.html  bench-2026-04-18-195119-0-4-2-rc-3.json  bench-2026-04-19-193155-0-4-2-rc-3.html  bench-2026-04-19-193155-0-4-2-rc-3.json  bench-2026-04-21-141523-0-4-2-rc-3.html  bench-2026-04-21-141523-0-4-2-rc-3.json  bench-2026-04-21-171842-0-4-2-rc-3.html  bench-2026-04-21-171842-0-4-2-rc-3.json  bench-2026-04-26-184014-0-4-2-rc-3.html  bench-2026-04-26-184014-0-4-2-rc-3.json  bench-2026-04-26-194342-0-4-3-rc-4.html  bench-2026-04-26-194342-0-4-3-rc-4.json
benchv2/src/: client.rs  comparison.rs  main.rs  metrics.rs  preflight.rs  runner.rs  verdict.rs
cli/: .env.sample  Cargo.toml  README.md  build.rs  full_smoke_output.txt  run-cluster-tests.sh  run-tests.sh
cli/src/: args.rs  completer.rs  config.rs  connect.rs  credentials.rs  error.rs  formatter.rs  history.rs  main.rs  parser.rs  session.rs
cli/test-lists/: cluster-followers.txt  topic-sql-consume-subset-20260418.txt
cli/tests/: README.md  auth_retry_test.rs  cli.rs  cluster.rs  connection.rs  performance.rs  repro_issue.rs  smoke.rs
link/: Cargo.toml  README.md
link/kalam-client/: Cargo.toml
link/kalam-consumer/: Cargo.toml
link/kalam-consumer-wasm/: Cargo.toml
link/kalam-link-dart/: Cargo.toml
link/link-common/: Cargo.toml
link/src/: client.rs  compression.rs  error.rs  event_handlers.rs  lib.rs  seq_id.rs  seq_tracking.rs  timestamp.rs
link/tests/: integration_tests.rs  proxied.rs  test_shared_connection.rs  test_subscription_cleanup.rs  test_user_table_subscriptions.rs  test_websocket_integration.rs
pg/: Cargo.toml  README.md  local_test.sql  pg_kalam.control  test.sh
pg/docker/: Dockerfile  Dockerfile.builder-base  Dockerfile.release-pg  Dockerfile.runtime  README.md  build-fast.sh  build.sh  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  image-description.txt  init-local.sql  init-test.sql  init.sql  test.sh  test.sql
pg/scripts/: pgrx-test-setup.sh
pg/src/: arrow_to_pg.rs  fdw_ddl.rs  fdw_handler.rs  fdw_import.rs  fdw_modify.rs  fdw_options.rs  fdw_scan.rs  fdw_state.rs  fdw_xact.rs  lib.rs  pg_to_kalam.rs  pgrx_entrypoint.rs  relation_table_options.rs  remote_executor.rs  remote_server.rs  remote_state.rs  session_settings.rs  write_buffer.rs
pg/tests/: e2e_ddl.rs  e2e_dml.rs  e2e_perf.rs  extension_metadata.rs  session_settings.rs
(+1873 files in other folders)
