[workspace]
resolver = "2"
members = [
    "backend/crates/kalamdb-macros",
    "backend/crates/kalamdb-commons",
    "backend/crates/kalamdb-configs",
    "backend/crates/kalamdb-filestore",
    "backend/crates/kalamdb-streams",
    "backend/crates/kalamdb-sharding",
    "backend/crates/kalamdb-session",
    "backend/crates/kalamdb-system",
    "backend/crates/kalamdb-tables",
    "backend/crates/kalamdb-observability",
    "backend/crates/kalamdb-core",
    "backend/crates/kalamdb-publisher",
    "backend/crates/kalamdb-sql",
    "backend/crates/kalamdb-store",
    "backend/crates/kalamdb-api",
    "backend/crates/kalamdb-auth",
    "backend/crates/kalamdb-oidc",
    "backend/crates/kalamdb-raft",
    "backend/crates/kalamdb-views",
    "backend",
    "link",
    "link/kalam-link-dart",
    "cli"
]
exclude = ["benchv2"]

[workspace.package]
version = "0.4.0-alpha3"
edition = "2021"
rust-version = "1.92"
authors = ["KalamDB Team"]
license = "Apache-2.0"
repository = "https://github.com/jamals86/KalamDB"

# Shared dependencies for all crates
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging
log = "0.4.29"

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "io-std", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }

# HTTP client (with HTTP/2 support) - using rustls-tls for cross-compilation compatibility
# Note: native-tls requires OpenSSL which is difficult to cross-compile for aarch64
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2", "multipart", "stream", "form"] }
url = "2.5.8"

# WebSocket
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }

# Time handling
chrono = { version = "0.4.44", features = ["serde"] }

# Storage
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy", "multi-threaded-cf"] }

# Apache Arrow ecosystem
# IMPORTANT: arrow, arrow-schema and parquet MUST match the version used by DataFusion.
# DataFusion 52.x uses arrow 57.x — using a different major version causes duplicate
# arrow_array crates in the binary and type-mismatch compilation errors.
# To upgrade arrow, first upgrade DataFusion to a version that uses the desired arrow version.
arrow = { version = "57.3.0", default-features = false, features = ["prettyprint", "json"] }
arrow-schema = { version = "57.3.0" }
datafusion = { version = "52.2.0", default-features = false, features = ["sql", "parquet", "recursive_protection"] }
datafusion-common = { version = "52.2.0" }
sqlparser = { version = "0.61.0" }
parquet = { version = "57.3.0", default-features = false, features = ["snap", "zstd", "arrow"] }

# Web framework
actix-web = { version = "4.13.0", features = ["http2"] }
actix-ws = "0.4.0"
actix-cors = "0.7"
actix-rt = "2.10"
actix-files = "0.6.10"
actix-multipart = "0.7"

# UUID generation
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }

# NanoID generation (21-char URL-safe unique IDs)
nanoid = "0.4.0"

# ULID generation
ulid = "1.1"

# JWT authentication
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }

# Configuration
toml = "0.9.8"
dotenv = "0.15"

# CLI tools
clap = { version = "4.5.60", features = ["derive", "color"] }
rustyline = { version = "17.0.2" }

# System
num_cpus = "1.16"
sysinfo = "0.38.2"
hostname = "0.4"

# Testing
tempfile = "3.25.0"
wait-timeout = "0.2"
serial_test = "3.3.1"

# Benchmarking
criterion = { version = "0.8.2", features = ["html_reports"] }

# Raft consensus
openraft = { version = "0.9.21", features = ["serde"] }

# gRPC for Raft network layer
tonic = { version = "0.14.5" }
tonic-prost = "0.14.5"
tonic-build = "0.14.4"
prost = "0.14.3"
prost-types = "0.14.3"

# Additional dependencies
bcrypt = "0.19.0"
rand = "0.10.0"
kalamdb-commons = { path = "backend/crates/kalamdb-commons" }
kalamdb-views = { path = "backend/crates/kalamdb-views" }
cookie = { version = "0.18", features = ["secure"] }
colored = "3.1.1"
fern = "0.7"
indicatif = "0.18.4"
rpassword = "7.3"
dirs = "6.0"
term_size = "0.3"
crossterm = "0.29.0"
assert_cmd = "2.1.2"
predicates = "3.1.4"
futures-util = { version = "0.3.32", default-features = false }
base64 = "0.22"
flatbuffers = "25.12.19"
flexbuffers = "25.9.23"
async-trait = "0.1.74"
once_cell = "1.20"
regex = "1.12.3"
dashmap = "6.1"
bytes = "1.11.1"
http-body = "1.0.0"
http-body-util = "0.1.2"
cc = "1.2.56"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }

# Object storage abstraction (S3/GCS/Azure/local)
# Kept as a workspace dependency so only kalamdb-filestore needs to opt-in.
# Using 0.12.4 to match DataFusion 51.0.0 dependency
object_store = { version = "0.13.1", features = ["aws", "gcp", "azure"] }
parking_lot = "0.12"
tokio-util = "0.7.18"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
storekey = "0.11"
moka = { version = "0.12.13", features = ["future", "sync"] }
ntest = "0.9.5"
wasm-bindgen = { version = "0.2.113" }
wasm-bindgen-futures = { version = "0.4.63" }
js-sys = { version = "0.3.90" }
libc = "0.2.182"
web-sys = { version = "0.3.83" }
getrandom = { version = "0.2.15" }
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
serde-wasm-bindgen = "0.6"
flate2 = "1.1.9"
tar = "0.4"
zip = { version = "4.2", default-features = false, features = ["deflate"] }
miniz_oxide = "0.9.0"
flutter_rust_bridge = "=2.11.1"
rust-embed = { version = "8.11.0", features = ["compression"] }
mime_guess = "2.0"
kalamdb-configs = { path = "backend/crates/kalamdb-configs" }
kalamdb-server = { path = "backend" }

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-actix-web = "0.7.21"
tracing-log = "0.2"
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["trace", "grpc-tonic", "http-proto"] }

# Custom profile for distribution builds (smaller, optimized binaries)
# Use with: cargo build --profile release-dist
[profile.release-dist]
inherits = "release"
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization (removes unused code across crates)
codegen-units = 1     # Slower build, but better optimization
panic = "abort"       # Removes stack unwinding code
strip = true          # Automatically strip symbols from the binary

# Custom profile for Docker builds (less memory-intensive for cross-compilation)
# Uses thin LTO instead of full LTO to reduce memory usage during linking
# Use with: cargo build --profile docker
[profile.docker]
inherits = "release"
opt-level = "z"       # Optimize for size (most aggressive)
lto = "thin"          # Thin LTO - uses less memory than full LTO during linking
codegen-units = 1     # Better optimization (single unit)
panic = "abort"       # Removes stack unwinding code
strip = true          # Automatically strip symbols from the binary

[profile.dev]
opt-level = 0        # no optimizations = faster compile
debug = 0            # minimal debug info = faster linking
incremental = true   # incremental builds
lto = "off"          # no link-time optimization
codegen-units = 256  # maximum parallelism for codegen
split-debuginfo = "unpacked"  # faster on macOS
