[package]
name = "kalamdb-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "kalamdb-server"
build = "build.rs"

[dependencies]
# Memory optimization
mimalloc = { version = "0.1", default-features = false, optional = true }

# Core library
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-handlers = { path = "crates/kalamdb-handlers" }
kalamdb-jobs = { path = "crates/kalamdb-jobs" }
kalamdb-api = { path = "crates/kalamdb-api", default-features = false }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-commons = { path = "crates/kalamdb-commons" }
kalamdb-configs = { path = "crates/kalamdb-configs" }
kalamdb-system = { path = "crates/kalamdb-system" }
kalamdb-dba = { path = "crates/kalamdb-dba" }


# Password hashing
bcrypt = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Async futures utilities
futures-util = { workspace = true }

# Logging
log = { workspace = true }

# Tracing / observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-log = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# Time handling
chrono = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# System
num_cpus = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
default = ["embedded-ui", "mimalloc"]
mimalloc = ["dep:mimalloc"]
embedded-ui = ["kalamdb-api/embedded-ui"]
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
# End-to-end tests that require a full test server instance
e2e-tests = []

[lib]
name = "kalamdb_server"
path = "src/lib.rs"

[[bin]]
name = "kalamdb-server"
path = "src/main.rs"

[[test]]
name = "test_testserver"
path = "tests/testserver/test_testserver.rs"
required-features = ["e2e-tests"]

[[test]]
name = "test_scenarios"
path = "tests/scenarios/test_scenarios.rs"
required-features = ["e2e-tests"]


# [[test]]
# name = "test_cluster"
# path = "tests/cluster/test_cluster.rs"

[[test]]
name = "test_misc"
path = "tests/misc/test_misc.rs"

[[test]]
name = "test_integration"
path = "tests/integration_tests/test_integration.rs"


[build-dependencies]
chrono = { workspace = true }
cc = { workspace = true }

[dev-dependencies]
# Internal crates (needed for tests)
kalamdb-core = { path = "crates/kalamdb-core" }
kalamdb-api = { path = "crates/kalamdb-api", default-features = false }
kalamdb-auth = { path = "crates/kalamdb-auth" }
kalamdb-sql = { path = "crates/kalamdb-sql" }
kalamdb-store = { path = "crates/kalamdb-store" }
kalamdb-commons = { path = "crates/kalamdb-commons" }
kalamdb-configs = { path = "crates/kalamdb-configs" }
kalamdb-tables = { path = "crates/kalamdb-tables" }
kalamdb-raft = { path = "crates/kalamdb-raft" }
kalamdb-sharding = { path = "crates/kalamdb-sharding" }
kalamdb-dba = { path = "crates/kalamdb-dba" }
kalam-link = { path = "../link" }

# External dependencies
tempfile = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
actix-web = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
datafusion = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
arrow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
serial_test = { workspace = true }
ntest = { workspace = true }
