[package]
name = "kalam-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive command-line client for KalamDB"
keywords = ["kalamdb", "database", "cli", "terminal"]
categories = ["database", "command-line-utilities"]

[features]
# End-to-end tests require a running KalamDB server/cluster.
# Enable with: cargo test -p kalam-cli --features e2e-tests --test smoke
e2e-tests = []

[[bin]]
name = "kalam"
path = "src/main.rs"

[[test]]
name = "cluster"
path = "tests/cluster.rs"
required-features = ["e2e-tests"]

[[test]]
name = "connection"
path = "tests/connection.rs"
required-features = ["e2e-tests"]

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["e2e-tests"]

[[test]]
name = "auth"
path = "tests/auth.rs"
required-features = ["e2e-tests"]

[[test]]
name = "auth_retry_test"
path = "tests/auth_retry_test.rs"
required-features = ["e2e-tests"]

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["e2e-tests"]

[[test]]
name = "flushing"
path = "tests/flushing.rs"
required-features = ["e2e-tests"]

[[test]]
name = "repro_issue"
path = "tests/repro_issue.rs"
required-features = ["e2e-tests"]

[[test]]
name = "storage"
path = "tests/storage.rs"
required-features = ["e2e-tests"]

[[test]]
name = "subscription"
path = "tests/subscription.rs"
required-features = ["e2e-tests"]

[[test]]
name = "tables"
path = "tests/tables.rs"
required-features = ["e2e-tests"]

[[test]]
name = "usecases"
path = "tests/usecases.rs"
required-features = ["e2e-tests"]

[[test]]
name = "users"
path = "tests/users.rs"
required-features = ["e2e-tests"]

[[test]]
name = "performance"
path = "tests/performance.rs"
required-features = ["e2e-tests"]

[dependencies]
# KalamDB connectivity
kalam-client = { path = "../link/kalam-client", default-features = false, features = ["native-cli"] }

# CLI argument parsing
clap = { workspace = true }

# Readline interface
rustyline = { workspace = true }

# Progress indicators
indicatif = { workspace = true }

# Terminal colors and styling
colored = { workspace = true }

# Config file parsing
toml = { workspace = true }
url = { workspace = true }

# Secure password input
rpassword = { workspace = true }

# Async runtime
tokio = { workspace = true }
libc = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Home directory detection
dirs = { workspace = true }

# Terminal dimensions
term_size = { workspace = true }

# Terminal control for interactive menus
crossterm = { workspace = true }

# Date/time formatting
chrono = { workspace = true }
rand.workspace = true

# Base64 encoding for history preservation
base64 = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
ntest = { workspace = true }
wait-timeout = { workspace = true }
kalamdb-commons = { workspace = true, features = ["full"] }
kalamdb-configs = { workspace = true }
kalamdb-server = { workspace = true }
object_store = { workspace = true }
jsonwebtoken = { workspace = true }
sysinfo = { workspace = true }
