[package]
name = "kalam-link"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly-compatible KalamDB client library"
keywords = ["kalamdb", "database", "client", "websocket", "wasm"]
categories = ["database", "web-programming::websocket", "wasm"]

[dependencies]
# Async runtime (native only)
tokio = { workspace = true, optional = true }

# HTTP client (native only)
# Not using workspace = true: drops http2 (saves ~1.7MB h2 crate) and form
# (unused). Uses rustls with aws-lc-rs crypto for TLS (reqwest 0.13 default).
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "multipart", "stream"], optional = true }

# WebSocket (native only)
tokio-tungstenite = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

# Byte buffers for upload streaming
bytes = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }

# HTTP Basic Auth encoding
base64 = { workspace = true }

# Futures utilities
futures-util = { workspace = true, default-features = false }

# Logging
log = { workspace = true }

# Decompression (pure Rust, WASM-compatible)
miniz_oxide = { workspace = true }

# WASM bindings (T039, T040, T063A-T063B)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "console",
    # WebSocket support (T063A-T063B)
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "Blob",
    "FileReader",
    # Fetch API support (T063F-T063H)
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    # FormData for file uploads
    "FormData",
    "BlobPropertyBag",
], optional = true }

[features]
# Default to tokio-runtime for native builds
# WASM builds use wasm-pack which doesn't use default features
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "reqwest", "tokio-tungstenite", "bytes", "http-body", "http-body-util"]
# Optional HTTP/2 support via reqwest (adds ~1.7MB h2 crate)
http2 = ["reqwest/http2"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "tsify-next", "serde-wasm-bindgen"]
# End-to-end tests require a running KalamDB server
e2e-tests = []

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["e2e-tests"]

[[test]]
name = "test_consumer"
path = "tests/test_consumer.rs"
required-features = ["e2e-tests"]

[[test]]
name = "test_user_table_subscriptions"
path = "tests/test_user_table_subscriptions.rs"
required-features = ["e2e-tests"]

[[test]]
name = "test_websocket_integration"
path = "tests/test_websocket_integration.rs"
required-features = ["e2e-tests"]

[[test]]
name = "wasm_integration"
path = "tests/wasm_integration.rs"
required-features = ["e2e-tests"]

[[test]]
name = "test_subscription_cleanup"
path = "tests/test_subscription_cleanup.rs"
required-features = ["e2e-tests"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
kalamdb-configs = { workspace = true }
kalamdb-server = { workspace = true }
tempfile = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# wasm-pack's bundled wasm-opt can lag behind newer WebAssembly features.
# SDK build scripts run the system wasm-opt explicitly after build instead.
wasm-opt = false
