[package]
name = "kalam-pg-extension"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[lib]
name = "pg_kalam"
crate-type = ["cdylib", "lib"]
doctest = false
# The extension library itself is not linkable as a plain Rust lib test binary;
# Postgres-backed testing runs through pg/tests and pg/test.sh instead.
test = false

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
pg_bench = ["dep:pgrx-bench"]
pg_test = []
e2e = []

[dependencies]
async-trait = { workspace = true }
arrow = { workspace = true }
datafusion-common = { workspace = true }
kalam-pg-api = { path = "crates/kalam-pg-api" }
kalam-pg-client = { path = "crates/kalam-pg-client", default-features = false }
kalam-pg-common = { path = "crates/kalam-pg-common", default-features = false }
kalam-pg-fdw = { path = "crates/kalam-pg-fdw" }
kalamdb-commons = { path = "../backend/crates/kalamdb-commons", default-features = false, features = ["rows"] }
pgrx = { workspace = true }
pgrx-bench = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
kalam-client = { path = "../link/kalam-client", default-features = false, features = ["tokio-runtime", "file-uploads"] }
kalamdb-commons = { path = "../backend/crates/kalamdb-commons", default-features = false, features = ["rows"] }
kalamdb-pg = { path = "../backend/crates/kalamdb-pg", features = ["server"] }
ntest = { workspace = true }
kalam-pg-api = { path = "crates/kalam-pg-api" }
kalam-pg-client = { path = "crates/kalam-pg-client" }
kalam-pg-common = { path = "crates/kalam-pg-common" }
kalam-pg-fdw = { path = "crates/kalam-pg-fdw" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
